# yolor

./: .gitignore  requirements.txt  setup.cfg
models/: export.py  models.py
src/yolor/models/: export.py  models.py
src/yolor/utils/: datasets.py  general.py  layers.py  loss.py  plots.py
utils/: datasets.py  general.py  layers.py  loss.py  plots.py  torch_utils.py
