[metadata]
name = tracktech-yolor
version = 0.01
author = https://github.com/WongKinYiu, adapted by https://github.com/UU-tracktech/
author_email = tracktech@uu.nl
description = Setup created for YOLOR implementation by WongKinYiu
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UU-tracktech/yolor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8